hphp/test/slow/named-local-missing.hhas.expectf
Fatal error: Assembler Error: line 3: unknown NamedLocal name: "oops" in %s/named-local-missing.hhas on line -1
